--- a/gtk.css
+++ b/gtk.css
@@ -1,4 +1,4 @@
-/* Dark Style for Nemo file mananger. Path: ~/.config/gtk-3.0/gtk.css */
+/* Dark Style for Nemo file mananger. Copy file to: ~/.config/gtk-3.0/gtk.css */
 
 /* Colors for Side Bar. */
 .nemo-window .sidebar .view {
